<com.example.andy.nbaplayoffbracket.LoginView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/gutter_full"
    android:paddingRight="@dimen/gutter_full"
    android:paddingBottom="@dimen/gutter_full"
    android:paddingTop="@dimen/gutter_full">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:layout_marginBottom="@dimen/gutter_half"
            android:textSize="@dimen/abc_text_size_body_1_material"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textSize="@dimen/abc_text_size_body_1_material"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/login"
            style="@android:style/Widget.Material.Light.Button.Borderless"/>

</com.example.andy.nbaplayoffbracket.LoginView>
