<?xml version="1.0" encoding="utf-8"?>
<com.example.andy.nbaplayoffbracket.LandingView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@android:style/Widget.Material.Light.Button.Borderless"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@android:style/Widget.Material.Light.Button.Borderless"/>

    </LinearLayout>

</com.example.andy.nbaplayoffbracket.LandingView>